--- a/translator.html
+++ b/translator.html
@@ -3,41 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text to Braille Translator</title>
+    <title>Braille Translator</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
+            color: #333;
         }
         .container {
             background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            width: 100%;
+        }
+        h1 {
+            text-align: center;
+            color: #2c3e50;
         }
         textarea {
             width: 100%;
-            height: 100px;
-            margin-bottom: 10px;
+            height: 120px;
+            margin-bottom: 15px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            resize: vertical;
+            font-size: 16px;
+        }
+        .button-group {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 15px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #2980b9;
+        }
+        #clearBtn {
+            background-color: #e74c3c;
+        }
+        #clearBtn:hover {
+            background-color: #c0392b;
         }
         #output {
             font-size: 24px;
             white-space: pre-wrap;
             word-break: break-all;
+            background-color: #f9f9f9;
+            padding: 15px;
+            border-radius: 5px;
+            min-height: 100px;
+        }
+        .copy-btn {
+            margin-top: 15px;
+            background-color: #2ecc71;
+        }
+        .copy-btn:hover {
+            background-color: #27ae60;
+        }
+        #fontSize {
+            width: 60px;
+            margin-left: 10px;
+        }
+        .settings {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Text to Braille Translator</h1>
+        <h1>Braille Translator</h1>
         <textarea id="input" placeholder="Enter text here"></textarea>
-        <button onclick="translateToBraille()">Translate</button>
+        <div class="button-group">
+            <button onclick="translateToBraille()">Translate to Braille</button>
+            <button onclick="translateToText()">Translate to Text</button>
+            <button id="clearBtn" onclick="clearAll()">Clear All</button>
+        </div>
+        <div class="settings">
+            <label for="fontSize">Font Size:</label>
+            <input type="number" id="fontSize" value="24" min="12" max="72" onchange="changeFontSize()">
+            <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+        </div>
         <div id="output"></div>
+        <button class="copy-btn" onclick="copyToClipboard()">Copy to Clipboard</button>
     </div>
     <script>
         const brailleMap = {
@@ -45,8 +113,15 @@
             'g': '⠛', 'h': '⠓', 'i': '⠊', 'j': '⠚', 'k': '⠅', 'l': '⠇',
             'm': '⠍', 'n': '⠝', 'o': '⠕', 'p': '⠏', 'q': '⠟', 'r': '⠗',
             's': '⠎', 't': '⠞', 'u': '⠥', 'v': '⠧', 'w': '⠺', 'x': '⠭',
-            'y': '⠽', 'z': '⠵', ' ': ' '
+            'y': '⠽', 'z': '⠵', ' ': ' ', '.': '⠲', ',': '⠂', '!': '⠖',
+            '?': '⠦', "'": '⠄', '"': '⠐⠂', '-': '⠤', '0': '⠼⠚', '1': '⠼⠁',
+            '2': '⠼⠃', '3': '⠼⠉', '4': '⠼⠙', '5': '⠼⠑', '6': '⠼⠋',
+            '7': '⠼⠛', '8': '⠼⠓', '9': '⠼⠊'
         };
+
+        const reverseBrailleMap = Object.fromEntries(
+            Object.entries(brailleMap).map(([key, value]) => [value, key])
+        );
 
         function translateToBraille() {
             const input = document.getElementById('input').value.toLowerCase();
@@ -59,6 +134,60 @@
 
             output.textContent = brailleText;
         }
+
+        function translateToText() {
+            const input = document.getElementById('input').value;
+            const output = document.getElementById('output');
+            let text = '';
+
+            for (let char of input) {
+                text += reverseBrailleMap[char] || char;
+            }
+
+            output.textContent = text;
+        }
+
+        function clearAll() {
+            document.getElementById('input').value = '';
+            document.getElementById('output').textContent = '';
+        }
+
+        function copyToClipboard() {
+            const output = document.getElementById('output');
+            navigator.clipboard.writeText(output.textContent)
+                .then(() => alert('Copied to clipboard!'))
+                .catch(err => console.error('Failed to copy: ', err));
+        }
+
+        function changeFontSize() {
+            const fontSize = document.getElementById('fontSize').value;
+            document.getElementById('output').style.fontSize = `${fontSize}px`;
+        }
+
+        function toggleDarkMode() {
+            document.body.classList.toggle('dark-mode');
+        }
+
+        document.body.insertAdjacentHTML('beforeend', `
+            <style>
+                .dark-mode {
+                    background-color: #2c3e50;
+                    color: #ecf0f1;
+                }
+                .dark-mode .container {
+                    background-color: #34495e;
+                }
+                .dark-mode #output {
+                    background-color: #2c3e50;
+                    color: #ecf0f1;
+                }
+                .dark-mode textarea {
+                    background-color: #2c3e50;
+                    color: #ecf0f1;
+                    border-color: #4a6278;
+                }
+            </style>
+        `);
     </script>
 </body>
 </html>
